background change and layout update

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nixie+One&display=swap');
 
 body {
-  background-color: #e3f2fd;
+  background-color: #001219;
   padding: 20px;
   margin: 0;
   font-family: 'Montserrat',
