--- a/src/card.css
+++ b/src/card.css
@@ -1,6 +1,7 @@
 .cards-item {
-    background: #f9f9f9;
-    border: 1px solid #bada55;
+    color: #f8f9fa;
+    background: #343a40;
+    border: 1px solid #003566;
     margin: 5px;
     width: 345px;
     border-radius: 10px;
