--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nixie+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Montserrat&display=swap');
 
 body {
   background-color: #001219;
@@ -22,7 +22,5 @@ code {
 }
 
 h1,h2,h3,h4,h5,h6{
-  font-family: 'Nixie One',
-  cursive;
-
+  font-family: 'Arvo',cursive;
 }
