--- a/src/card.css
+++ b/src/card.css
@@ -2,7 +2,7 @@
     color: #f8f9fa;
     background: #343a40;
     border: 1px solid #003566;
-    margin: 5px;
+    margin: 25px 5px;
     width: 345px;
     border-radius: 10px;
     overflow: hidden;
