--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,19 @@ code {
 h1,h2,h3,h4,h5,h6{
   font-family: 'Arvo',cursive;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
