--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
 
 body {
   /* background-color: #001219;*/
-  background: url(./World-Map-2.jpg);
+  background: url(../images/World-Map-2.jpg);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
